--- a/Estilo.css
+++ b/Estilo.css
@@ -155,7 +155,7 @@ article p {
 article button {
     padding: 10px 20px;
     border: none;
-    background-color: #ff4081;
+    background-color: #5d40ff;
     color: white;
     border-radius: 20px;
     cursor: pointer;
