--- a/Estilo.css
+++ b/Estilo.css
@@ -357,7 +357,13 @@ html, body {
     margin: 0;
     padding: 0;
 }
-h4 {font-size: 2rem;
+h4 {
+    font-size: 2rem;
+    color: #0d10e0;
+    letter-spacing: 4px;
+}
+.aqui {
+    font-size: 1rem;
     color: #0d10e0;
     letter-spacing: 4px;
 }
