--- a/Estilo.css
+++ b/Estilo.css
@@ -179,7 +179,7 @@ p {
     line-height: 1.5;
 }
 
-/* Estilo para as reviews */
+/* Estilo para os downloads */
 section#downloads .review-container {
     display: flex;
     flex-wrap: wrap;
@@ -189,7 +189,7 @@ section#downloads .review-container {
     animation: fadeInUp 1s ease-out;
 }
 
-section#reviews2 .review {
+section#downloads .downloads {
     flex: 1 1 calc(33.33% - 20px);
     box-sizing: border-box;
     background-color: #222;
@@ -200,15 +200,15 @@ section#reviews2 .review {
     animation: fadeInUp 1s ease-out forwards;
 }
 
-section#reviews2 .review:nth-child(1) {
+section#downloads .downloads:nth-child(1) {
     animation-delay: 0.2s;
 }
 
-section#reviews2 .review:nth-child(2) {
+section#downloads .downloads:nth-child(2) {
     animation-delay: 0.4s;
 }
 
-section#reviews2 .review:nth-child(3) {
+section#downloads .downloads:nth-child(3) {
     animation-delay: 0.6s;
 }
 
